--- a/LogisticsApp FE/style.css
+++ b/LogisticsApp FE/style.css
@@ -42,7 +42,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
   font-size: 50px;
   letter-spacing: 10px;
   font-family: Impact, sans-serif;
@@ -61,6 +62,8 @@ body {
   border-bottom: 1px solid black;
 }
 .section_text {
+  display: inline-block;
+  text-align: center;
   padding: 30px;
 }
 
@@ -80,7 +83,6 @@ body {
   height: 7vh;
   display: flex;
   justify-content: center;
-  align-items: center;
   padding: 5px;
   border-top: 1px solid black;
   background-color: rgb(232, 247, 234);
@@ -90,7 +92,6 @@ body {
 .courier_container,
 .pricing_container {
   padding: 30px;
-  flex: 1;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -103,9 +104,7 @@ body {
   padding-top: 60px;
   justify-content: center;
 }
-
 .button_area {
-  justify-content: center;
   padding: 20px;
 }
 
@@ -118,7 +117,6 @@ body {
   border: 1px solid black;
   border-radius: 7%;
 }
-
 .item h2 {
   display: flex;
   justify-content: center;
@@ -129,6 +127,7 @@ body {
 }
 
 button {
+  cursor: pointer;
   border-color: var(--color-primary);
   padding: 7px;
   border-radius: 10%;
@@ -165,6 +164,7 @@ input {
 /* FOOTER */
 .footer {
   background-color: var(--background-footer);
+  overflow: hidden;
 }
 .footer_container {
   height: 40vh;
@@ -173,6 +173,7 @@ input {
 }
 .footer_text {
   max-width: 25%;
+  height: 40vh;
   display: flex;
   align-items: center;
   padding-right: 20px;
@@ -180,7 +181,7 @@ input {
 
 #footer_img {
   height: 40vh;
-  padding-right: 30px;
+  padding-right: 40px;
 }
 
 .footer_btns {
